--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
  		<meta http-equiv="X-UA-Compatible" content="IE=edge">
  		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Akhil's Car Blog</title>
+        <title>Cars Blog</title>
         
         <!-- Bootstrap -->
         <!-- Latest compiled and minified CSS -->
@@ -28,7 +28,7 @@
  		<div class="navbar navbar-inverse navbar-fixed-top">
  			<div class="container">
  	 	 		<div class="navbar-header">
- 	 	 			<a href="/" class="navbar-brand">Akhil's Car Blog</a>
+ 	 	 			<a href="/" class="navbar-brand">Cars Blog</a>
  	 	 	 		<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
  	 	 	 	 		<span class="icon-bar"></span>
  	 	 	 	 		<span class="icon-bar"></span>
