--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -44,5 +44,13 @@
         <div class="body-content container">
             {{{body}}}
         </div>
+        
+        <div id="myFooter" class="row">
+            <div class="col-md-12">
+                <footer class="text-center">
+                    <strong><a href="http://www.akhileshgoud.me" target="blank" id="footer-link">Developed by Akhilesh Goud!</a></strong>
+                </footer>
+            </div>
+        </div>
     </body>
 </html>
